--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -9,6 +9,9 @@ $panel-border-radius: 0px;
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+@import "font-awesome";
+
+
 /* parallax */ 
 
 * {
